[NGRINDER-176]Create a subclass of SecurityManager, used to limit the permissions.
add limit in script validating